--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="style.css">
-    <title>House paint</title>
+    <title>{{inputs.case}} - House paint</title>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript" src="chart.js"></script>
     <script type="text/javascript">
@@ -43,7 +43,7 @@
             data.addRows(chartData);
 
             var options = {
-                height: 1000
+                height: (data.getNumberOfRows()+1) * 42,
             };
 
             var chart = new google.visualization.Gantt(document.getElementById('chart_div'));
@@ -94,7 +94,7 @@
         <p><input type="submit" value="submit"></p><br>
     </form>
 
-    <div id="chart_div"></div>
+    <div id="chart_div" style="overflow-y: scroll; "></div>
 
     <table>
         <tr>
